[gd_scene load_steps=3 format=2]

[ext_resource path="res://addons/dialogue_tree_creator/EditorGUI/DialogueTreeEditor/Links/ConditionsSelector.gd" type="Script" id=1]
[ext_resource path="res://addons/dialogue_tree_creator/Assets/MagnifyingGlass.png" type="Texture" id=2]

[node name="ConditionSelectorRoot" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -1004.0
margin_bottom = -580.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ConditionsSelector" type="PopupMenu" parent="."]
margin_right = 20.0
margin_bottom = 40.0

[node name="TextureButton" type="TextureButton" parent="."]
margin_right = 27.0
margin_bottom = 27.0
texture_normal = ExtResource( 2 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="id_pressed" from="ConditionsSelector" to="." method="_on_ConditionsSelector_id_pressed"]
[connection signal="pressed" from="TextureButton" to="." method="_on_TextureButton_pressed"]
